# streakz

./: LICENSE  README.md  pyproject.toml  requirements.txt
migrations/versions/: 74efac2f6437_.py  7cbcbb563ade_.py
streakz/: __init__.py  forms.py  habit_data.py  index.py  models.py
streakz/static/css/: styles.css
streakz/static/js/: habit_data.js  index.js
streakz/templates/: base.html
streakz/templates/habit_data/: cal.html  habit_data.html
streakz/templates/helpers/: _form_helpers.html  _formhelpers.html  _modalhelpers.html
streakz/templates/index/: add_habit.html  index.html  index.html.bak
tests/: conftest.py  test_factory.py  test_habit_data.py  test_index.py
